# interpreting

./: .env.example  .gitignore  README.md  plan.md  pyproject.toml
configs/interventions/: jspace_swap.yaml  residual_patch.yaml  sae_ablate.yaml
configs/models/: gemma3.yaml  qwen3.yaml
configs/readouts/: activation_oracle.yaml  jlens.yaml  sae.yaml
configs/tasks/: distractor.yaml  latent_slot.yaml  prefill.yaml
notebooks/: 00_smoke_test.ipynb  01_experiment_latent_slot.ipynb  02_experiment_distractor.ipynb  03_experiment_hard_to_report.ipynb  04_experiment_prefill_introspection.ipynb  05_experiment_hidden_objective.ipynb  06_experiment_tool_comparison.ipynb  07_experiment_cross_model.ipynb  08_experiment_base_vs_instruct.ipynb  09_experiment_activation_oracle.ipynb
paper/: paper.md
scripts/: build_notebooks.py  build_notebooks_10_12.py  generate_datasets.py  run_all.py  smoke.py
sources/: INDEX.md  bibliography.bib
sources/papers/: 01_jspace_jlens.md  02_nla.md  03_activation_oracles.md  04_aobench.md  05_ao_calibration.md  06_mib.md  07_activation_patching.md  08_introspection.md  09_circuits_may2026.md  10_turn_averaged_sae.md  11_circuit_tracing.md  12_saebench.md  13_axbench.md  14_gradsae.md  15_sae_steering_selection.md  16_sparse_feature_circuits.md  17_sparse_feature_coactivation.md  18_looking_inward.md  19_adversarial_prefills.md  20_eval_awareness.md  21_probing_eval_awareness.md  22_lying_internal_state.md  23_dont_know_dont_know.md
sources/tooling/: activation_oracles.md  gemma3.md  gemma_scope2.md  qwen_scope.md  transformer_lens.md
tests/: test_metadata_and_ranking.py
(+39 files in other folders)
